# LR4

./: CMakeLists.txt
code/LabWork4_PartC/Task4/: CMakeLists.txt  Task_4  Task_4.c  Tests.cpp
code/LabWork4_PartC/Task4/modules/: CMakeLists.txt  functions.c  functions.h
code/LabWork4_PartC/Task5/: CMakeLists.txt  Task_5  Task_5.c  Tests.cpp  Tests5.cpp
code/LabWork4_PartC/Task5/modules/: CMakeLists.txt  functions.c  functions.h
code/LabWork4_PartC/Task6/: CMakeLists.txt  Task6.c  Tests6.cpp
code/LabWork4_PartC/Task6/modules/: CMakeLists.txt  functions.c  functions.h
code/Task1/: CMakeLists.txt  Task_1.cpp  Tests.cpp  task1
code/Task1/modules/: CMakeLists.txt  functions.cpp  functions.h
code/Task2/: CMakeLists.txt  Task_2.cpp  Tests.cpp  task2
code/Task2/modules/: CMakeLists.txt  functions.cpp  functions.h
code/Task3/: CMakeLists.txt  Task_3  Task_3.cpp  Tests.cpp  task3
code/Task3/modules/: CMakeLists.txt  functions.cpp  functions.h
